Fixed the glossary.

--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -209,8 +209,7 @@ which is from the Xilinx low-cost product range. It has a quantity of
 programmable logic that Xilinx considers as approximately equivalent to an IC
 with about 200,000 gates.
 
-The FPGA can be programmed using a JTAG\glossary{name={JTAG}, description={Joint
-Test Action Group}} boundary-scan chain or on power-on using a Xilinx SPROM. The
+The FPGA can be programmed using a \gls{jtag} boundary-scan chain or on power-on using a Xilinx SPROM. The
 state of the Spartan-3 is lost on power-off~\cite{Xilinx_SP3_DS} so a SPROM
 (Serial Programmable Read-Only Memory) is used to restore the state at power-on.
 The SPROM is programmed using the JTAG boundary-scan chain as well.
